--- a/css/style.css
+++ b/css/style.css
@@ -1,423 +1,516 @@
 body {
-    margin: 0px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+  background-color: #f2f2f2;
+  margin: 0%;
+  padding: 0%;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+::placeholder {
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.562);
+}
+
+.azul1 {
+  height: 80px;
+  width: 100%;
+  background-color: #0080cd;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu div {
+  width: 22px;
+  height: 2px;
+  background: #fff;
+  margin: 7px;
+}
+
+.logoclima{
+  height: 30px;
+  width: 120px;
+  margin-top: 10px;
+  margin-right: 5%;
+  margin-left: 1%;
+}
+
+.form-control {
+  display: flex;
+  height: 37px;
+  width: 49%;
+  border: none;
+  text-align: left;
+  border-radius: 5px;
+}
+
+.fa{
+  color: rgba(255, 255, 255, 0.562);
+}
+
+.azullogin {
+  display: flex;
+  height: 40px;
+  width: 155px;
+  border: 1px solid #ffffff;
+  background-color: #10a1dd;
+  border-radius: 8px;
+  margin-left: 5%;
+  align-items: center;
+}
+
+.icon{
+  border-radius: 8px;
+  height: 38px;
+  width: 39px;
+}
+
+.letras {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  font-size: 15px;
+  font-weight: lighter;
+  color: #ffffff;
+}
+
+.bg-modal{
+  height: 100%;
+  width: 100%;
+  top: -100%;
+  transition: 350ms;
+  background-color: #404040;
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal{
+  height: 47%;
+  width: 40%;
+  background-color: #ffffff;
+  position: relative;
+  display: block;
+}
+
+.modal span{
+  font-size: 22px;
+  margin: 10px;
+  transition: 350ms;
+  color: #000000;
+  cursor: pointer;
+  display: block;
+}
+
+.modal span:hover{
+  color: #4d4a4a;
+  transition: 350ms;
+}
+
+.log{
+  font-size: 32px;
+  margin-top: 30px;
+}
+
+#email{
+  height: 50px;
+  width: 90%;
+  margin-top: 20px;
+  border-radius: 5px;
+  color: #4d4a4a;
+}
+
+#senha{
+  height: 50px;
+  width: 90%;
+  margin-top: 20px;
+  border-radius: 5px;
+  color: #4d4a4a;
+}
+
+#entrar{
+  height: 50px;
+  width: 90%;
+  margin-top: 20px;
+  border: none;
+  border-radius: 30px;
+  background-color: #404040;
+  color: #ffffff;
+}
+
+.azul2 {
+  height: 40px;
+  width: 100%;
+  background-color: #0f4783;
+  font-size: 13px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.azuldivisor{
+  width: 65%;
+}
+
+.nuvem {
+  height: 25px;
+  width: 25px;
+}
+
+.link{
+  color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.date {
+  font-size: 16px;
+}
+
+.low-high {
+  font-size: 22px;
+}
+
+.flutuante{
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.branco1 {
+  height: 380px;
+  width: 26%;
+  background-color: #ffffff;
+  color: #404040;
+  border-radius: 7px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.linha1 {
+  margin-top: 20px;
+  font-size: 18px;
+  line-height: 26px;
+}
+
+.tempo-img {
+  display: flex;
+  height: 80px;
+  width: 80px;
+}
+
+.condicao{
+  font-size: 50px;
+  margin: 0%;
+  color: #404040;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;  
+}
+
+.tempo-temp{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.max-min{
+  margin: 0%;
+}
+
+.linha3 {
+  display: flex;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.6);
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.ceu{
+  font-size: 15px;
+}
+
+.icon1{
+  margin: 0%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.linha5{
+  display: flex;
+  margin-top: 20px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.azulpalito {
+  background-color: #90cbf8;
+  height: 16px;
+  width: 6px;
+  border-radius: 3px;
+}
+
+.umid {
+  margin-left: 5%;
+  text-transform: uppercase;
+  color: black;
+  font-size: 12px;
+  line-height: 18px;
+}
+
+.imgUmid{
+  margin-left: 44%;
+}
+.porc {
+  margin-left: 2%;
+  text-transform: lowercase;
+  color: black;
+  font-size: 15px;
+}
+
+.info {
+  display: flex;
+  width: 100%;
+  margin-top: 20px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.informacoes {
+  color: #f9f9f9;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #0080cd;
+  cursor: pointer;
+  font-size: 12px;
+  line-height: 18px;
+  border-radius: 20px;
+  border: 8px solid transparent;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+}
+
+.texto {
+  margin-top: 10px;
+  font-size: 14px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.data{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.date{
+  font-size: 14px;
+}
+
+.branco2 {
+  display: flex;
+  height: 380px;
+  width: 55%;
+  background-color: #ffffff;
+  margin-left: 30px;
+  border-radius: 7px;
+}
+
+.imagem{
+  float: left;
+  height: 100%;
+  width: 73%;
+}
+
+.noticia{
+  text-align: left;
+  margin-top: 20px;
+  margin-right: 5px;
+  margin-left: 50%;
+}
+
+.um{
+  font-size: 24px;
+  color: #404040;
+}
+
+.dois{
+  font-size: 14px;
+  line-height: 25px;
+  color: #868585;
+}
+
+.logoclima:hover{
+  transition: background-color 1s;
+  opacity: 0.8;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.azullogin:hover{
+  transition: background-color 1s;
+  opacity: 0.8;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.link:hover{
+  transition: background-color 1s;
+  opacity: 0.8;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.informacoes:hover{
+  transition: background-color 1s;
+  opacity: 0.8;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.imagem:hover{
+  transition: background-color 1s;
+  opacity: 0.8;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.noticia:hover{
+  transition: background-color 1s;
+  opacity: 0.8;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 1075px) {
+
+  .form-control{
+    display: none;
   }
-  
-  ::placeholder {
-    font-size: 15px;
-    color: rgba(255, 255, 255, 0.562);
-  }
-  
-  .azul1 {
-    height: 80px;
-    width: 100%;
-    background-color: #0080cd;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .logoclima{
-    height: 30px;
-    width: 120px;
-    margin-top: 10px;
-    margin-right: 5%;
-    margin-left: 1%;
-  }
-  
-  .menu div {
-    width: 22px;
-    height: 2px;
-    background: #fff;
-    margin: 7px;
-  }
-  
-  .azulbusca {
-    display: flex;
+
+  .pesquisa{
     height: 37px;
-    width: 51%;
+    width: 30%;
+    justify-content:right;
     border: none;
-    color: #ffffff;
-    text-align: left;
-    background-color: #0267a3;
-    align-items: center;
-    border-radius: 5px;
+    background-color: #0080cd;
   }
-  
+
   .azullogin {
-    display: flex;
-    height: 40px;
-    width: 155px;
-    border: 1px solid #ffffff;
-    background-color: #10a1dd;
-    border-radius: 8px;
-    margin-left: 5%;
-    text-decoration: none;
-    user-select: none;
-    cursor: pointer;
+    margin-left: 0px;
   }
-  
-  .icon{
-    border-radius: 8px;
-  }
-  .letras {
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 15px;
-    font-weight: lighter;
-    color: #ffffff;
-  }
-  
-  .azul2 {
-    height: 40px;
-    width: 100%;
-    background-color: #0f4783;
-    font-size: 13px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
+
   .azuldivisor{
-    width: 58%;
+    width: 36%;
   }
-  
-  .nuvem {
-    height: 25px;
-    width: 25px;
-  }
-  
-  .link{
-    color: #ffffff;
-    text-decoration: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
+
   .flutuante{
-    width: 100%;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    flex-direction:column;
+  }
+
+  .branco1{
+    width:60%;
+    height:400px;
   }
   
-  .branco1 {
-    height: 380px;
-    width: 26%;
-    background-color: #ffffff;
-    color: #404040;
-    border-radius: 7px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .linha1 {
-    margin-top: 20px;
-    font-size: 18px;
-    line-height: 26px;
-  }
-  
-  .linha2 {
-    display: flex;
-    margin-top: 10px;
-    margin-left: 30%;
-    margin-right: 30%;
-    height: 60px;
-    width: 60px;
-    font-size: 60px;
-  }
-  
-  .linha3 {
-    display: flex;
-    font-size: 15px;
-    color: rgba(0, 0, 0, 0.6);
-    margin-top: 20px;
-    margin-left: 5px;
-    margin-right: 5px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .icon2{
-    margin-left: 5%;
-  }
-  
-  .linha4{
-    display: flex;
-    margin-top: 30px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .verdepalito {
-    background-color: #c5d262;
-    height: 16px;
-    width: 6px;
-    border-radius: 3px;
-  }
-  
-  .vento {
-    margin-left: 5%;
-    text-transform: uppercase;
-    color: black;
-    font-size: 13px;
-    line-height: 18px;
-  }
-  
-  .km {
-    margin-left: 48%;
-    text-transform: lowercase;
-    font-size: 15px;
-  }
-  
-  .linha5{
-    display: flex;
-    margin-top: 30px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .azulpalito {
-    background-color: #90cbf8;
-    height: 16px;
-    width: 6px;
-    border-radius: 3px;
-  }
-  
-  .umid {
-    margin-left: 5%;
-    text-transform: uppercase;
-    color: black;
-    font-size: 13px;
-    line-height: 18px;
-  }
-  
-  .imgUmid{
-    margin-left: 44%;
-  }
-  .porc {
-    margin-left: 2%;
-    text-transform: lowercase;
-    font-size: 15px;
-  }
-  
-  .info {
-    margin-top: 20px;
-    margin-right: 5px;
-    margin-left: 25%;
-    display: flex;
-  }
-  
-  .informacoes {
-    color: #f9f9f9;
-    font-family: "Avenir Roman", sans-serif;
-    background: #0080cd;
-    cursor: pointer;
-    font-size: 12px;
-    line-height: 18px;
-    border-radius: 20px;
-    border: 8px solid transparent;
-    text-align: center;
-    text-decoration: none;
-    width: 60%;
-  }
-  
-  .texto {
-    margin-top: 10px;
-    font-size: 12px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    color: rgba(0, 0, 0, 0.8);
-  }
-  
-  .branco2 {
-    display: flex;
-    height: 380px;
-    width: 55%;
-    background-color: #ffffff;
-    margin-left: 30px;
-    border-radius: 7px;
-  }
-  
-  .imagem{
-    float: left;
-    height: 100%;
-    width: 73%;
-  }
-  
-  .main{
-    text-decoration: none;
-  }
-  
-  .noticia{
-    text-align: left;
-    margin-top: 20px;
-    margin-right: 5px;
-    margin-left: 50%;
-  }
-  
-  .um{
-    font-size: 24px;
-    color: #404040;
-  }
-  
-  .dois{
-    font-size: 14px;
-    line-height: 25px;
-    color: #868585;
-  }
-  
-  .logoclima:hover{
-    transition: background-color 1s;
-    opacity: 0.8;
-  }
-  
-  .azullogin:hover{
-    transition: background-color 1s;
-    opacity: 0.8;
-  }
-  
-  .link:hover{
-    transition: background-color 1s;
-    opacity: 0.8;
-  }
-  
-  .info:hover{
-    transition: background-color 1s;
-    opacity: 0.8;
-  }
-  
-  .imagem:hover{
-    transition: background-color 1s;
-    opacity: 0.8;
-  }
-  
-  .noticia:hover{
-    transition: background-color 1s;
-    opacity: 0.8;
-  }
-  
-  @media screen and (max-width: 1075px) {
-  
-    .azulbusca{
-      display: none;
-    }
-  
-    .pesquisa{
-      height: 37px;
-      width: 30%;
-      justify-content:right;
-      border: none;
-      background-color: #0080cd;
-    }
-  
-    .azullogin {
-      margin-left: 0px;
-    }
-  
-    .azuldivisor{
-      width: 36%;
-    }
-  
-    .flutuante{
-      flex-direction:column;
-    }
-  
-    .branco1{
+  .branco2{
       width:60%;
-      height:400px;
-    }
-    
-    .branco2{
-        width:60%;
-        height:650px;
-        margin-top: 30px;
-        margin-bottom: 25px;
-        margin-left: 0px;
-    }
-  
-    .imagem{
-      height: 60%;
-      width: 100%;
-    }
-  
-    .noticia{
-      text-align: left;
-      margin: 3%;
-    }
-  
-    .um{
-      font-size: 26px;
-      line-height: 30px;
-      color: #404040;
-      margin-top: 440px;
-    }
-    
-    .dois{
-      font-size: 15px;
-      line-height: 25px;
-      color: #868585;
-    }
-  }
-  
-  @media screen and (max-width: 650px) {
-  
-    .pesquisa{
-      width: 8%;
-    }
-  
-    .azullogin {
-      margin-left: 0%;
-    }
-    
-    .branco1{
-      width:340px;
-      height:400px;
-    }
-  
-    .branco2{
-      width:340px;
-      height:450px;
+      height:650px;
       margin-top: 30px;
       margin-bottom: 25px;
       margin-left: 0px;
   }
-  
-    .imagem{
-      height: 250px;
-      width: 100%;
-    }
-  
-    .noticia{
-      text-align: left;
-      margin: 3%;
-    }
-  
-    .um{
-      font-size: 26px;
-      line-height: 30px;
-      color: #404040;
-      margin-top: 280px;
-    }
-    
-    .dois{
-      font-size: 15px;
-      line-height: 25px;
-      color: #868585;
-    }
+
+  .imagem{
+    height: 60%;
+    width: 100%;
+  }
+
+  .noticia{
+    text-align: left;
+    margin: 3%;
+  }
+
+  .um{
+    font-size: 26px;
+    line-height: 30px;
+    color: #404040;
+    margin-top: 440px;
   }
   
+  .dois{
+    font-size: 15px;
+    line-height: 25px;
+    color: #868585;
+  }
+}
+
+@media screen and (max-width: 650px) {
+
+  .pesquisa{
+    width: 8%;
+  }
+
+  .azullogin {
+    margin-left: 0%;
+  }
   
+  .branco1{
+    width:340px;
+    height:400px;
+  }
+
+  .branco2{
+    width:340px;
+    height:450px;
+    margin-top: 30px;
+    margin-bottom: 25px;
+    margin-left: 0px;
+}
+
+  .imagem{
+    height: 250px;
+    width: 100%;
+  }
+
+  .noticia{
+    text-align: left;
+    margin: 3%;
+  }
+
+  .um{
+    font-size: 26px;
+    line-height: 30px;
+    color: #404040;
+    margin-top: 280px;
+  }
+  
+  .dois{
+    font-size: 15px;
+    line-height: 25px;
+    color: #868585;
+  }
+}
