--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-::placeholder {
-  font-size: 15px;
-  color: rgba(255, 255, 255, 0.562);
+small{
+  color: #f70000ad;
 }
 
 .azul1 {
@@ -114,32 +113,6 @@ body {
 .log{
   font-size: 32px;
   margin-top: 30px;
-}
-
-#email{
-  height: 50px;
-  width: 90%;
-  margin-top: 20px;
-  border-radius: 5px;
-  color: #4d4a4a;
-}
-
-#senha{
-  height: 50px;
-  width: 90%;
-  margin-top: 20px;
-  border-radius: 5px;
-  color: #4d4a4a;
-}
-
-#entrar{
-  height: 50px;
-  width: 90%;
-  margin-top: 20px;
-  border: none;
-  border-radius: 30px;
-  background-color: #404040;
-  color: #ffffff;
 }
 
 .azul2 {
